# Cro-Stem

./: .gitignore  Cargo.toml  MONETIZATION_STRATEGY.md  README.md  corpus.json  croatian_stemming_corpus_100_rijeci.json  croatian_stemming_corpus_10_tisuca.json  dokumentacija.md  failures_10k.txt  hr_corpus_final_1000.json  hr_corpus_natural_1000.json  index.html  normalization_corpus.json  pyproject.toml  run_tests.py
.github/workflows/: deploy-demo.yml
assets/: cro_stem_bg-B2EAjKRX.wasm  cro_stem_bg-B99y6EG5.wasm  cro_stem_bg-ox0fEB8o.wasm  index-2Xe_n6rG.css  index-Bb7fHEVW.js  index-BhZFIbf0.js  index-BloLgxjD.js  index-Bz2k4UiB.js  index-CeOyP9Dv.js
cro-normalize/: Cargo.toml  run_normalization_tests.py
cro-normalize/src/: heuristics.rs  lib.rs  normalizer.rs
cro_stem/: Cargo.toml  README.md  accuracy_results_v5.txt  corpus.json  failures_10k.txt  user_test_results.txt  user_test_results_v2.txt
cro_stem/docs/: current_status.md  development_log.md  hybrid_normalization_plan.md
cro_stem/examples/: logic_demo.rs  search_demo.rs  user_test.rs
cro_stem/playground/: App.tsx  README.md  index.html  metadata.json  package-lock.json  types.ts
cro_stem/playground/components/: Controls.tsx  DevInstructionsModal.tsx  FeedbackModal.tsx  ResultsTable.tsx  SessionLogModal.tsx
cro_stem/src/: heuristics.rs  lib.rs  tantivy.rs
cro_stem/tests/: accuracy_test_10k.rs  accuracy_test_1k.rs
demo/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
demo/components/: ApiPreview.tsx  BatchProcessor.tsx  ComparisonTable.tsx  Footer.tsx  Hero.tsx  InteractiveDemo.tsx  UseCases.tsx
demo/services/: stemmer.ts
docs/: current_status.md  development_log.md  improvement_plan.md
examples/: logic_demo.rs
playground/: index.css  package.json  types.ts
playground/components/: Header.tsx
playground/cro_stem/: cro_stem.d.ts  cro_stem.js  cro_stem_bg.wasm  cro_stem_bg.wasm.d.ts
playground/services/: croStemService.ts
portal/components/: InteractiveDemo.tsx
portal/pkg/: README.md  cro_stem.d.ts  cro_stem.js  (+2 more)
src/: heuristics.rs  lib.rs  normalizer.rs
tests/: integration_test.rs
(+3 files in other folders)
