[package]
name = "cro_stem"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.4.0"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true         # Enable Link-Time Optimization.
codegen-units = 1  # Reduce parallelism to allow for better optimization.
panic = "abort"    # Abort on panic for smaller binary.
strip = true       # Strip symbols from the binary.


[lib]
name = "cro_stem"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.19.0"
features = ["extension-module"]

