[package]
name = "cro_stem"
version = "0.1.7"
edition = "2021"
authors = ["Denis Sakač <sdenis.vr@gmail.com>"]
description = "A lightning-fast, zero-dependency Croatian stemming library written in Rust."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Ja1Denis/Cro-Stem" 
keywords = ["nlp", "croatian", "stemming", "rust", "python"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "cro_stem"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3"]
tantivy = ["dep:tantivy-tokenizer-api"]


[dependencies]
lazy_static = "1.4.0"
wasm-bindgen = "0.2"
phf = { version = "0.11", features = ["macros"] }
cro-normalize = { path = "../cro-normalize" }
tantivy-tokenizer-api = { version = "0.3", optional = true }


[dependencies.pyo3]
version = "0.19.0"
features = ["extension-module"]
optional = true

[[example]]
name = "search_demo"
required-features = ["tantivy"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# tantivy = "0.22"  # Uncomment to run search_demo example
